apps/kube-prometheus-stack/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.fle.api54.de`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: default
